--- a/styles/chmduquesne.tex
+++ b/styles/chmduquesne.tex
@@ -16,8 +16,8 @@ $endif$
 
 \setupcolor[hex]
 \definecolor[titlegrey][h=757575]
-\definecolor[sectioncolor][h=397249]
-\definecolor[rulecolor][h=9cb770]
+\definecolor[sectioncolor][h=000000]
+\definecolor[rulecolor][h=000000]
 
 % Enable hyperlinks
 \setupinteraction[state=start, color=sectioncolor]
@@ -30,9 +30,9 @@ $endif$
 
 %\setuppagenumbering[location={footer,center}]
 
-\setupbodyfont[10pt, calibri]
+\setupbodyfont[9pt, helvetica]
 \setupinterlinespace[line=10pt] % Adjust this value to change the line spacing
-\setupwhitespace[0.5mm] % Adjust this value to change the inter-paragraph spacing
+\setupwhitespace[0mm] % Adjust this value to change the inter-paragraph spacing
 
 \setupblackrules[width=31mm, color=rulecolor]
 
